added social media buttons, curious why they aren't working. Will try this online.

--- a/app/views/blog_posts/show.html.haml
+++ b/app/views/blog_posts/show.html.haml
@@ -2,5 +2,7 @@
   .row.show
     .col-md-9
       = render @post
-      = render :partial => "/shared/disqus"
+      .comments
+        = render :partial => "/shared/disqus"
     .col-md-3
+      = render :partial => "social_media"
