--- a/app/views/pages/meet_the_team.html.haml
+++ b/app/views/pages/meet_the_team.html.haml
@@ -106,15 +106,15 @@
   .row
     .col-md-4 
       %h2.name Abbie Taylor
-      %em Head of the Oxford Chapter
+      %em Head of the Oxford Student Group
       %p Abbie is a Medical student at Oxford University and organises the 80,000 Hours events in Oxford. Abbie is particularly interested in ways to make more difference in careers in the healthcare industry, and hopes to encourage other medical students to think more thoroughly about their impact.
     .col-md-4
       %h2.name Jacob Trefethen
-      %em Head of the Cambridge Chapter
+      %em Head of the Cambridge Student Group
       %p Jacob is studying philosophy at Cambridge University and is president of the recently founded 80,000 Hours chapter in Cambridge.
     .col-md-4
       %h2.name Max Siegel
-      %em Head of the Princeton Chapter
+      %em Head of the Princeton Student Group
       %p Max is a philosophy student at Princeton University and director of the Princeton chapter of 80,000 Hours. He is interested in metaethics and wants to answer questions about value and practical reason that will help us to rank the most important global causes and the most effective interventions. He plans to pursue a career as a high-impact philosopher.
   %hr
 
