--- a/app/assets/stylesheets/blog.css
+++ b/app/assets/stylesheets/blog.css
@@ -87,3 +87,42 @@
     color: white; }
 .blog .comments {
   padding: 0 10px 20px; }
+
+.blog .blog-sidebar{
+  margin-top:63px;
+}
+
+.blog .blog-sidebar .comment-count {
+  margin-bottom:18px;
+}
+
+.blog .blog-sidebar .comment-count img{
+  width:15px;
+  position:relative;
+  top:-1px;
+  opacity:0.3;
+}
+
+.blog .blog-sidebar .comment-count a{
+  color: #666;
+  font-family: 'Muli', sans-sefif;
+  margin-left: 5px;
+}
+
+.blog .blog-sidebar{
+  margin-top:55px;
+}
+.blog .blog-sidebar .social-media-buttons{
+  padding: 6px;
+  background: #e6e6e6;
+  width: 105px;
+  border-radius:3px;
+}
+
+.blog .blog-sidebar .social-media-buttons .fb-like{
+  margin-bottom:8px;
+}
+
+.blog .blog-sidebar .social-media-buttons .twitter-share-button{
+  margin-bottom:8px;
+}
