--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -30,6 +30,19 @@
 
 <body style="background:#eee">
 
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=524811344265777";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<%= render :partial => "/shared/disqus_comment_count" %>
+
+
+
 <%= render :partial => "/layouts/header" %>
 <%= render :partial => "layouts/subheader" %>
 
