social media working with real link.  Will try facebook

--- a/app/views/blog_posts/_social_media.html.erb
+++ b/app/views/blog_posts/_social_media.html.erb
@@ -1,10 +1,18 @@
-  <div class="social-media-buttons">
-    <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width="The pixel width of the plugin" data-height="The pixel height of the plugin" data-colorscheme="light" data-layout="button_count" data-action="like" data-show-faces="true" data-send="false"></div>
+<div class="blog-sidebar">
+  <div class="comment-count">
+    <%= image_tag("/assets/blog/231.png") %>
+    <a href=<%= request.original_url.to_s + "#disqus_thread"%>>Link</a>
+  </div>
 
+  <div class="social-media-buttons">
+  <div class="fb-like" data-href="<%request.original_url.to_s%>" data-width="The pixel width of the plugin" data-height="The pixel height of the plugin" data-colorscheme="light" data-layout="button_count" data-action="like" data-show-faces="true" data-send="false"></div>
+
+    <br>
 
     <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
+    <br>
 
 
     <div class="linkedin-share-button">
@@ -13,4 +21,8 @@ lang: en_US
       </script>
       <script type="IN/Share" data-counter="right"></script>
     </div>
+
+
   </div>
+
+</div>
