--- a/app/assets/stylesheets/blog.css
+++ b/app/assets/stylesheets/blog.css
@@ -45,7 +45,7 @@
   background: white;
   padding: 35px 35px 20px 35px;
   border-radius: 2px;
-  margin-bottom: 50px;
+  margin-bottom: 13px;
   border: 1px solid #e8e8e8; }
   .blog .show .entry .heading {
     margin-bottom: 30px; }
@@ -100,22 +100,24 @@
   width:15px;
   position:relative;
   top:-1px;
-  opacity:0.3;
+  opacity:0.2;
 }
 
 .blog .blog-sidebar .comment-count a{
-  color: #666;
+  color: #888;
   font-family: 'Muli', sans-sefif;
   margin-left: 5px;
+  font-size:0.95em;
+
 }
 
 .blog .blog-sidebar{
   margin-top:55px;
 }
 .blog .blog-sidebar .social-media-buttons{
-  padding: 6px;
+  padding: 8px;
   background: #e6e6e6;
-  width: 105px;
+  width: 110px;
   border-radius:3px;
 }
 
@@ -125,4 +127,33 @@
 
 .blog .blog-sidebar .social-media-buttons .twitter-share-button{
   margin-bottom:8px;
+}
+
+.blog .social-media-buttons-horizontal {
+  background: #e6e6e6;
+  padding: 7px 7px 5px;
+  border-radius:3px;
+  float:left;
+  width:320px;
+  margin-top:2px;
+  margin-left: 0px;
+  margin-bottom:34px;
+}
+
+.blog .social-media-buttons-horizontal .fb-like{
+  float:left;
+  width: 100px;
+  height:21px;
+}
+
+.blog .social-media-buttons-horizontal .twitter{
+  float:left;
+  width: 100px;
+  height:21px;
+}
+
+.blog .social-media-buttons-horizontal .linkedin-share-button{
+  float:left;
+  width: 100px;
+  height:21px;
 }
