--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -63,7 +63,7 @@
           .text-center
             = image_tag("/assets/front_page/icons/blue/247.png")
             %h2
-              Evidence-Baced
+              Evidence-Based
           %p
             Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
         .col-md-4.item
