--- a/app/views/shared/_sidebar_item.html.haml
+++ b/app/views/shared/_sidebar_item.html.haml
@@ -3,7 +3,7 @@
     .content= content
   .attribution
     - if defined? attribution
-      = "by ".html_safe + attribution
+      = attribution
   -# Commented out dates to remove clutter    
   -# - if defined? date
   -#    on
