--- a/app/views/blog_posts/_subscribe.html.haml
+++ b/app/views/blog_posts/_subscribe.html.haml
@@ -3,5 +3,9 @@
   .subscribe-option
     .subscribe-text
       %a{:href => '/blog/feed.atom'} Subscribe via RSS
+
+
+  %h3 Subscribe To Our Newsletter
   .subscribe-option
     = render partial: "./shared/mailing_list", locals: { text: "" }
+  = image_tag("/assets/pages/coaching/collin-coaching.png")
