--- a/app/views/blog_posts/index.html.haml
+++ b/app/views/blog_posts/index.html.haml
@@ -16,12 +16,8 @@
     .col-md-1
     .col-md-4
       .box.sidebar.blog-sidebar
-        %p
-          .fblike
-            <fb:like href="#{blog_posts_path}" send="false" width="450" show_faces="false"></fb:like>
-
+        = image_tag("/assets/pages/coaching/collin-coaching.png")
         = render :partial => "popular_posts"
-        %hr
         = render :partial => "subscribe"
 
 
