--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -28,7 +28,7 @@
 <%= render :partial => "/shared/google_fonts.html" %>
 </head>
 
-<body style="background:#eee">
+<body style="background:#f6f6f6">
 
 
 <div id="fb-root"></div>
