--- a/app/assets/stylesheets/blog.css
+++ b/app/assets/stylesheets/blog.css
@@ -10,10 +10,10 @@
   src: url("243719_0_0.eot?#iefix") format("embedded-opentype"), url("243719_0_0.woff") format("woff"), url("243719_0_0.ttf") format("truetype"); }
 
 .blog .index {
-  margin-top: 10px; }
+  margin-top: 35px; }
   .blog .index .entry {
     margin-top: 0em;
-    margin-bottom: 2em; }
+    margin-bottom: 6em; }
     .blog .index .entry img {
       max-height: 350px;
       display: none;
@@ -35,21 +35,37 @@
         font-family: 'Muli', sans-sefif;
         margin-top: 4px; }
     .blog .index .entry .content {
-      color: #666;
-      border-bottom: 1px dashed #ddd; }
+      color: #666; }
     .blog .index .entry img {
       max-width: 100%; }
+  .blog .index .sidebar h3 {
+    color: #2fa2b8;
+    font-family: 'Muli', sans-serif;
+    border-bottom: 1px solid #eee;
+    padding-bottom: 10px;
+    margin-bottom: 20px; }
   .blog .index .sidebar .sidebar-item {
     margin-bottom: 10px; }
     .blog .index .sidebar .sidebar-item a {
-      color: #2fa2b8;
+      color: #666;
       font-family: 'Muli', sans-sefif;
       font-weight: 500;
-      font-size: 1.2em; }
+      font-size: 1.15em; }
     .blog .index .sidebar .sidebar-item .attribution {
-      color: #999;
+      color: #aaa;
       font-family: 'Muli', sans-sefif;
       font-weight: 100; }
+  .blog .index .sidebar .section {
+    margin-top: 58px;
+    margin-bottom: 44px; }
+  .blog .index .sidebar .mail-list-signup .form-control {
+    font-size: 16px;
+    height: 38px; }
+  .blog .index .sidebar .mail-list-signup .submit a {
+    font-size: 17px;
+    background-color: #1bc2b1;
+    padding: 7px 12px;
+    border: none; }
 .blog .show .entry {
   background: white;
   padding: 35px 35px 20px 35px;
