--- a/app/assets/stylesheets/blog.css.scss
+++ b/app/assets/stylesheets/blog.css.scss
@@ -2,10 +2,10 @@
 
 .blog {
   .index{
-    margin-top:10px;
+    margin-top:35px;
     .entry{
       margin-top: 0em;
-      margin-bottom:2em;
+      margin-bottom:6em;
       img{
         max-height:350px;
         display: none;
@@ -33,26 +33,48 @@
       }
       .content{
         color:#666;
-        border-bottom: 1px dashed #ddd;
       }
       img{
         max-width:100%;
       }
     }
     .sidebar{
+        h3{
+          color: #2fa2b8;
+          font-family: 'Muli', sans-serif;
+          border-bottom:1px solid #eee;
+          padding-bottom:10px;
+          margin-bottom:20px;
+        }
       .sidebar-item{
         margin-bottom:10px;
         a{
-          color: #2fa2b8;
+          color: #666;
           font-family: 'Muli', sans-sefif;
           font-weight: 500;
-          font-size:1.2em;
+          font-size:1.15em;
 
         }
         .attribution{
-          color: #999;
+          color: #aaa;
           font-family: 'Muli', sans-sefif;
           font-weight:100;
+        }
+      }
+      .section{
+        margin-top:58px;
+        margin-bottom:44px;
+      }
+      .mail-list-signup{
+        .form-control{
+          font-size:16px;
+          height:38px;
+        }
+        .submit a{
+          font-size:17px;
+          background-color:#1bc2b1;
+          padding:7px 12px;
+          border:none;
         }
       }
     }
@@ -190,7 +212,6 @@
   .comments{
     padding: 0 10px 20px;
   }
-
 
 }
 
