different icons for homepage

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -58,45 +58,45 @@
             %h2
               Maximizing Impact
           %p
-            Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
-        .col-md-4.item
-          .text-center
-            = image_tag("/assets/front_page/icons/blue/247.png")
-            %h2
-              Evidence-Based
-          %p
-            Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
+            Some of the paths open to you have far more impact than others.  That's why we aim to seek out the most high impact opportunities in the world, and help you take them.
         .col-md-4.item
           .text-center
             = image_tag("/assets/front_page/icons/blue/272.png")
             %h2
+              Evidence-Based
+          %p
+            It's difficult to know which ways to make a difference really work.  That's why we work with academics and leaders in prioritisation research, and our findings are based on in-depth research.
+        .col-md-4.item
+          .text-center
+            = image_tag("/assets/front_page/icons/blue/123.png")
+            %h2
               Replacability
           %p
-            Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
+            Some common ways to make a difference, like becoming a doctor, don't make as much difference as you might first think.  That's because many doctors are replaceable.  We seek out the opportunities that have a true impact.
       %h1.text-center
         Main Research
       .row
         .col-md-4.item
           .text-center
-            = image_tag("/assets/front_page/icons/blue/103.png")
+            = image_tag("/assets/front_page/icons/blue/181.png")
             %h2
               Best Causes
           %p
-            Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
+            How can you go about working out in which causes you can have the most impact? Start using our framework for assessing causes.
         .col-md-4.item
           .text-center
-            = image_tag("/assets/front_page/icons/blue/272.png")
+            = image_tag("/assets/front_page/icons/blue/247.png")
             %h2
               Best Careers
           %p
-            Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
+            What are your most high impact career opportunities? Start using our framework for assessing careers.
         .col-md-4.item
           .text-center
-            = image_tag("/assets/front_page/icons/blue/272.png")
+            = image_tag("/assets/front_page/icons/blue/101.png")
             %h2
               Planning Process
           %p
-            Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
+            Having trouble tying it all together? Start by using our career model. (And we won’t just tell you do to ‘do what you’re passionate about.’)
 
 
   .section.affiliations
