pictures of ben on website

--- a/app/views/blog_posts/index.html.haml
+++ b/app/views/blog_posts/index.html.haml
@@ -16,7 +16,7 @@
     .col-md-1
     .col-md-4
       .box.sidebar.blog-sidebar
-        = image_tag("/assets/blog/writing-example.jpg")
+        = image_tag("/assets/blog/ben-7.png")
         .section
           = render :partial => "subscribe"
         .section
