member show page completed

--- a/app/views/etkh_profiles/overview.html.haml
+++ b/app/views/etkh_profiles/overview.html.haml
@@ -1,19 +1,36 @@
-.container
-  .row
-    .col-sm-2
-    .col-sm-8
-      %h1
-        1,003 individuals are using <br> their careers for strategic good.
-        
-    .col-sm-2
-  .row
-    .col-sm-1
-    .col-sm-4
-      = image_tag("/assets/community/overview/julia-wise.png")
-    .col-sm-7
-      %p
-        There is almost nothing that doesn’t interest me. I enjoy helping people. I can speak Swahili, and would like to work in some development capacity in Africa. In ten years, I want to build socially-sustainable businesses abroad that can generate economic growth in developing countries.
-      %p There is almost nothing that doesn’t interest me. I enjoy helping people. I can speak Swahili, and would like to work in some development capacity in Africa. In ten years, I want to build socially-sustainable businesses abroad that can generate economic growth in developing countries."
-      %p There is almost nothing that doesn’t interest me. I enjoy helping people. I can speak Swahili, and would like to work in 
-    .col-sm-1
+.overview
+  .background
+    .sliver
+    .members-row-top
+    .section.cta-section
+      .container
+        .row
+          .col-sm-12
+            %h1.text-center
+              1,003+ individuals <span class="dark">are using their careers for strategic good.</span>
+          .row.buttons
+            .col-md-4.col-md-offset-2
+              %button.btn.btn-large.secondary.cta{href: "/"}
+                Learn More
+            .col-md-3
+              %button.btn.btn-large.primary.cta{href: "/"}
+                Join
+    .members-row-bottom
+    .sliver
+    .section.people-say
+    .section.testimonial
+      .container
+        .row
+          .col-sm-1
+          .col-sm-4
+            = image_tag("/assets/community/overview/julia-wise.png")
+          .col-sm-6
+            .quote
+              %p
+                I’m a social worker, currently a mental health clinician in a jail. Although I realize social work was not the most effective field I could have chosen, I’ve decided to stay within the field for the foreseeable future. I donate most of my earnings, with the Against Malaria Fund getting the majority right now.
+              %p
+                I write the blog <a href="http://www.givinggladly.com/">Giving Gladly</a> about effective giving. I notice that people think giving a lot must mean a very gloomy life, but that hasn’t been my experience at all.
+              %p
+                I support 80,000 Hours because I wish I had been thinking about effective career choice starting a lot earlier. 80,000 Hours is exactly the kind of resource I wish had been around then!
+            <h2> Julia Wise </br> Social Worker </h2>
 
